--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.19.0'
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
     testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
+    testImplementation "org.mockito:mockito-inline:2.16.0"
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
